# dhall-terraform

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  default.nix  dhall-terraform.cabal  shell.nix  stack.yaml  terraform-dhall.cabal
.circleci/: config.yml
app/: Main.hs
examples/: main.dhall
lib/aws/data_sources/: aws_acm_certificate.dhall  aws_acmpca_certificate_authority.dhall  aws_alb_target_group.dhall  aws_ami.dhall  aws_ami_ids.dhall  aws_api_gateway_api_key.dhall  aws_api_gateway_resource.dhall  aws_api_gateway_rest_api.dhall  aws_arn.dhall  aws_autoscaling_group.dhall  aws_autoscaling_groups.dhall  aws_availability_zone.dhall  aws_availability_zones.dhall  aws_batch_compute_environment.dhall  aws_batch_job_queue.dhall  aws_billing_service_account.dhall  aws_caller_identity.dhall  aws_canonical_user_id.dhall  aws_cloudformation_export.dhall  aws_cloudformation_stack.dhall  aws_cloudhsm_v2_cluster.dhall  aws_cloudwatch_log_group.dhall  aws_codecommit_repository.dhall  aws_cognito_user_pools.dhall  aws_cur_report_definition.dhall  aws_customer_gateway.dhall  aws_db_cluster_snapshot.dhall  aws_db_event_categories.dhall  aws_db_instance.dhall  aws_db_snapshot.dhall  aws_dx_gateway.dhall  aws_dynamodb_table.dhall  aws_ebs_default_kms_key.dhall  aws_ebs_snapshot.dhall  aws_ebs_snapshot_ids.dhall  aws_ebs_volume.dhall  aws_ec2_transit_gateway.dhall  aws_ec2_transit_gateway_dx_gateway_attachment.dhall  aws_ec2_transit_gateway_route_table.dhall  aws_ec2_transit_gateway_vpc_attachment.dhall  (+93 more)
lib/aws/provider/: provider.dhall
lib/aws/resources/: aws_acm_certificate.dhall  aws_acm_certificate_validation.dhall  aws_acmpca_certificate_authority.dhall  aws_alb.dhall  aws_alb_listener_certificate.dhall  aws_alb_target_group.dhall  aws_ami.dhall  aws_ami_copy.dhall  aws_ami_from_instance.dhall  aws_ami_launch_permission.dhall  aws_api_gateway_account.dhall  aws_api_gateway_api_key.dhall  aws_api_gateway_authorizer.dhall  aws_api_gateway_base_path_mapping.dhall  aws_api_gateway_client_certificate.dhall  aws_api_gateway_deployment.dhall  aws_api_gateway_documentation_part.dhall  aws_api_gateway_documentation_version.dhall  aws_api_gateway_domain_name.dhall  aws_api_gateway_gateway_response.dhall  aws_api_gateway_integration.dhall  aws_api_gateway_integration_response.dhall  aws_api_gateway_method.dhall  aws_api_gateway_method_response.dhall  aws_api_gateway_method_settings.dhall  aws_api_gateway_model.dhall  aws_api_gateway_request_validator.dhall  aws_api_gateway_resource.dhall  aws_api_gateway_rest_api.dhall  aws_api_gateway_stage.dhall  aws_api_gateway_usage_plan.dhall  aws_api_gateway_usage_plan_key.dhall  aws_api_gateway_vpc_link.dhall  aws_app_cookie_stickiness_policy.dhall  aws_appautoscaling_policy.dhall  aws_appautoscaling_scheduled_action.dhall  aws_appautoscaling_target.dhall  aws_appmesh_mesh.dhall  aws_appmesh_route.dhall  aws_appmesh_virtual_node.dhall  (+457 more)
lib/azurerm/data_sources/: azurerm_api_management.dhall  azurerm_api_management_api.dhall  azurerm_api_management_group.dhall  azurerm_api_management_product.dhall  azurerm_api_management_user.dhall  azurerm_app_service.dhall  azurerm_app_service_certificate.dhall  azurerm_app_service_certificate_order.dhall  azurerm_app_service_plan.dhall  azurerm_application_insights.dhall  azurerm_automation_account.dhall  azurerm_automation_variable_bool.dhall  azurerm_automation_variable_int.dhall  azurerm_automation_variable_string.dhall  azurerm_availability_set.dhall  azurerm_azuread_application.dhall  azurerm_azuread_service_principal.dhall  azurerm_batch_account.dhall  azurerm_batch_certificate.dhall  azurerm_batch_pool.dhall  azurerm_builtin_role_definition.dhall  azurerm_cdn_profile.dhall  azurerm_client_config.dhall  azurerm_container_registry.dhall  azurerm_cosmosdb_account.dhall  azurerm_data_factory.dhall  azurerm_data_lake_store.dhall  azurerm_dev_test_lab.dhall  azurerm_dev_test_virtual_network.dhall  azurerm_dns_zone.dhall  azurerm_eventhub_namespace.dhall  azurerm_express_route_circuit.dhall  azurerm_firewall.dhall  azurerm_hdinsight_cluster.dhall  azurerm_healthcare_service.dhall  azurerm_image.dhall  azurerm_key_vault.dhall  azurerm_key_vault_access_policy.dhall  azurerm_key_vault_key.dhall  azurerm_key_vault_secret.dhall  (+59 more)
lib/azurerm/provider/: provider.dhall
lib/azurerm/resources/: azurerm_analysis_services_server.dhall  azurerm_api_management.dhall  azurerm_api_management_api.dhall  azurerm_api_management_api_operation.dhall  azurerm_api_management_api_operation_policy.dhall  azurerm_api_management_api_policy.dhall  azurerm_api_management_api_schema.dhall  azurerm_api_management_api_version_set.dhall  azurerm_api_management_authorization_server.dhall  azurerm_api_management_backend.dhall  azurerm_api_management_certificate.dhall  azurerm_api_management_group.dhall  azurerm_api_management_group_user.dhall  azurerm_api_management_logger.dhall  azurerm_api_management_openid_connect_provider.dhall  azurerm_api_management_product.dhall  azurerm_api_management_product_api.dhall  azurerm_api_management_product_group.dhall  azurerm_api_management_product_policy.dhall  azurerm_api_management_property.dhall  azurerm_api_management_subscription.dhall  azurerm_api_management_user.dhall  azurerm_app_service.dhall  azurerm_app_service_active_slot.dhall  azurerm_app_service_certificate.dhall  azurerm_app_service_certificate_order.dhall  azurerm_app_service_custom_hostname_binding.dhall  azurerm_app_service_plan.dhall  azurerm_app_service_slot.dhall  azurerm_app_service_source_control_token.dhall  azurerm_application_gateway.dhall  azurerm_application_insights.dhall  azurerm_application_insights_analytics_item.dhall  azurerm_application_insights_api_key.dhall  azurerm_application_insights_web_test.dhall  azurerm_automation_account.dhall  azurerm_automation_credential.dhall  azurerm_automation_dsc_configuration.dhall  (+247 more)
nix/: dhall.nix  generic-random.nix
nix/nixpkgs/: default.nix
src/Terraform/: Convert.hs  Types.hs
tf/aws/: main.tf  schema-patched.json  schema.json
tf/azurerm/: schema-patched.json  schema.json
(+2018 files in other folders)
